Footer Alignment Issue Fixed (#593)
* Update base.html

Footer Alignment Issue Fixed

* Update main.css

Footer Alignment Issue Fixed

* Update bootstrap.css

Footer Alignment Issue Fixed

* Update bootstrap.css

Footer Alignment Issue Fixed

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -1,5 +1,5 @@
 #page-wrapper {
-    height: 100%;
+    height: auto;
 }
 
 @media screen and (max-width: 720px) {
